fix: horizontal scroll issue on mobile devices

--- a/themes/ag/static/css/custom.scss
+++ b/themes/ag/static/css/custom.scss
@@ -22,11 +22,6 @@ $fa-font-path: "./webfonts";
   max-width: 650px;
 }
 
-#home-list {
-  position: relative;
-  left: 15px;
-}
-
 #me {
   width: 120px;
   height: 120px;
